# VERASER-CLI

./: CMakeLists.txt  README.md  veraser.c
